# aoc-2024

./: .envrc  .gitignore  Cargo.toml  build.nix  flake.nix  hercules-ci.nix  pre-commit.nix  settings.nix
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_16.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  grid.rs  lib.rs  main.rs
src/examples/day1/: intermediate.in
src/examples/day10/: intermediate.in
src/examples/day11/: intermediate.in
src/examples/day12/: intermediate.1.in  intermediate.2.in  intermediate.3.in
src/examples/day13/: intermediate.in
src/examples/day14/: intermediate.in
src/examples/day16/: intermediate.1.in  intermediate.2.in
src/examples/day2/: intermediate.in
src/examples/day3/: intermediate.1.in  intermediate.2.in
src/examples/day4/: intermediate.in
src/examples/day5/: intermediate.in
src/examples/day6/: intermediate.in
src/examples/day7/: intermediate.in
src/examples/day8/: intermediate.in
src/examples/day9/: intermediate.2.in  intermediate.in
