[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["std"] }
clap = { version = "4.5.22", features = ["derive"] }
guard = "0.5.2"
itertools = "0.13.0"
lockfree = "0.5.1"
nom = "7.1.3"
nonempty = "0.10.0"
proptest = "1.5.0"
rayon = "1.10.0"
